# nanozymes_ai

./: .dockerignore  .gitignore  ML_System_Design_Doc.md  README.md  dockerfile  pyproject.toml  requirements.txt  test_streamlit.py
ML System Design Doc/: ML_System_Design_Doc_1_1.md  ML_System_Design_Doc_1_2.md  ML_System_Design_Doc_1_4.md
NanoBacked/: Dockerfile  NanoBacked.csproj  NanoBacked.sln  Program.cs  WeatherForecast.cs  app.db-shm  app.db-wal  appsettings.json
NanoBacked/ClientApp/: .env.development  package-lock.json  package.json
NanoBacked/Controllers/: OidcConfigurationController.cs  WeatherForecastController.cs
NanoBacked/Data/: ApplicationDbContext.cs
NanoBacked/Models/: ApplicationUser.cs
NanoBacked/Pages/: Error.cshtml.cs  _ViewImports.cshtml
ai_talks/: chat.py
data/: nanozymes.xlsx  nanozymes_extended.csv  nanozymes_synthesis.csv  ~$nanozymes.xlsx
front-end/: .gitignore  .parcelrc  .prettierrc  README.md  package.json
notebooks/: test_LLM.ipynb
remote_repositories/API service/: .gitignore  README.md  dockerfile  exists_files.txt  main.py  pyproject.toml  requirements.txt
remote_repositories/API service/docs/: описание api сервиса.md  пример работы find_parameters.md  пример работы nanozymes bot.md
remote_repositories/API service/src/: chat.py  create prompt  embedder_e5.py  find_params.py  find_similar.py  get_context.py  get_parameters.py  logger.py  parser_log.py
remote_repositories/API service/tests/: auto_index.py
src/: save_falcon-40b.py  test_GPU_cluster.py  test_LLM.py
stress-tests/: stress_test_v1.py
(+27 files in other folders)
