[tool.poetry]
name = "nanozymes"
version = "0.1.0"
description = ""
authors = ["Sim Roman <roman_407@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.27.0"
matplotlib = "^3.8.0"
numpy = "1.25.2"
slurm-jupyter = "^2.4.8"
torch = { version = "2.0.1", source = "torch-cuda-11-7" }
torchvision = { version = "0.15.2", source = "torch-cuda-11-7" }
sympy = "^1.12"
transformers = "^4.33.2"
sentencepiece = "^0.1.99"
einops = "^0.6.1"
accelerate = "^0.23.0"
langchain = "^0.0.300"
pypdfium2 = "^4.20.0"

[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "torch-cuda-11-7"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
